[package]
name = "spinlock-rs"
version = "0.1.0"
authors = [
    "Gabriel Guerra <gguergabo@gmail.com>", 
]
license = "MIT" 
repository = "https://github.com/guergabo/spinlock-rs.git"
description = "Building an intuition for spin locks"
rust-version = "1.78.0"

[dependencies]

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
pprof = { version = "0.13.0", features = ["criterion", "flamegraph"] }

[[bench]]
name = "spinlock"
path = "benches/spinlock.rs"
harness = false

[[bench]]
name = "mutex"
path = "benches/mutex.rs"
harness = false

